# backend/src/routes.ts
@@ -25,11 +25,11 @@ router.post('/user/session', new AuthUserController().handle); // ok
 router.get('/user/detail', isAuthenticated, new DetailUserController().handle); // ok
 router.put('/user/edit', isAuthenticated, new EditUserController().handle); // ok
 router.delete('/user/remove', isAuthenticated, new RemoveUserController().handle); // ok
-router.get('/user/list-types', new ListAllTypesController().handle);
-router.get('/user/list-all', isAuthenticated, new ListAllUsersController().handle); 
-router.get('/user/change-password', new ResetPasswordController().handle);
-router.post('/token/forgot_password', new ForgotPasswordController().handle);
-router.get('/token/validate_forgot', new ValidateTokenController().handle);
-router.get('/user/change-password-forgot', new ResetForgotPasswordController().handle);
+router.get('/user/list-types', new ListAllTypesController().handle); // ok
+router.get('/user/list-all', isAuthenticated, new ListAllUsersController().handle); //ok
+router.get('/user/change-password', new ResetPasswordController().handle); // ok
+router.post('/token/forgot_password', new ForgotPasswordController().handle); //ok
+router.get('/token/validate_forgot', new ValidateTokenController().handle); //ok
+router.get('/user/change-password-forgot', new ResetForgotPasswordController().handle); //ok
 
 export { router };
